--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,10 @@
     max-width: 500px;
     width: 100%;
   }
+  .active {
+    color: orange;
+    font-weight: bold;
+  }
   .customModalAuth{
      background: rgba(10, 11, 24, 0.7);
   }
